--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ ul {
 
 /* the actual databox that contains the add hotspot button */
 #addHotspotButton {
-    
+    color: auto;
 }
 
 /* ********************************************************************************** */
