Added conversion from hnt to cad. Added new global var for the preferences. gotta save that in localstorage later. Need custom options for picking currency and something else I don't remember. Also need *delete* buttons on the boxes in the setup page.

--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,13 @@ ul {
  }
 
 p.small-text {
-    font-size: 0.7em;
+    font-size: 0.75em;
+}
+
+p.small-text-cash {
+    font-size: 0.65em;
+    margin-top: -15px;
+    padding: 0;
 }
 
 p.tiny-text {
