--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ ul {
 }
 
 .box-content {
-    margin: 17px;
+    margin: 0 0 5px 30px;
     padding: 2px;
     height: auto;
     /* border: 1px solid #304a4b1b; */
